[package]
name = "hyperv_rs"
version = "0.1.0"
authors = ["Gurinder Singh <gurinder.singh@1e.com>"]
edition = "2018"

[dependencies]
powershell_rs = { git = "https://github.com/gurry/powershell_rs"}
failure = "0.1.4"
serde = "1.0.84"
serde_derive = "1.0.84"
serde_json = "1.0.34"
uuid = { version = "0.7.1", features = ["serde"] }

